# split-folders

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Pipfile  README.md  RELEASING.md  pyproject.toml  setup.py
.github/workflows/: test.yml
split_folders/: __init__.py  __main__.py  cli.py  split.py
splitfolders/: __init__.py  cli.py  grouping.py  split.py  utils.py
tests/: test_split.py
