
[tool.poetry]
authors = ["Johannes Filter <hi@jfilter.de>"]
classifiers = [
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Topic :: Utilities",
]
description = "Split folders with files (e.g. images) into training, validation and test (dataset) folders."
keywords = ["machine-learning", "training-validation-test", "datasets", "folders"]
license = "MIT"
name = "split_folders"
packages = [
  {include = "splitfolders"},
]
readme = "README.md"
repository = "https://github.com/jfilter/split-folders"
version = "0.4.3"

[tool.poetry.scripts]
split-folders = "splitfolders.cli:run"
split_folders = "splitfolders.cli:run"
splitfolders = "splitfolders.cli:run"

[tool.poetry.dependencies]
python = ">=3.6"
tqdm = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true, python = ">=3.6"}
pylint = "*"
pytest = "*"
tqdm = "*"

[tool.poetry.extras]
full = ["tqdm"]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
