
[tool.poetry]
authors = ["Johannes Filter <hi@jfilter.de>"]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Topic :: Utilities",
]
description = "Split folders with files (e.g. images) into training, validation and test (dataset) folders."
keywords = ["machine-learning", "training-validation-test", "datasets", "folders"]
license = "MIT"
name = "split_folders"
packages = [
  {include = "splitfolders"},
]
readme = "README.md"
repository = "https://github.com/jfilter/split-folders"
version = "0.5.1"

[tool.poetry.scripts]
split-folders = "splitfolders.cli:run"
split_folders = "splitfolders.cli:run"
splitfolders = "splitfolders.cli:run"

[tool.poetry.dependencies]
python = ">=3.10"
tqdm = {version = "*", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"
tqdm = "*"

[tool.poetry.extras]
full = ["tqdm"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
