[project]
name = "split-folders"
version = "0.5.1"
description = "Split folders with files (e.g. images) into training, validation and test (dataset) folders."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  {name = "Johannes Filter", email = "hi@jfilter.de"},
]
keywords = ["machine-learning", "training-validation-test", "datasets", "folders"]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]

[project.optional-dependencies]
full = ["tqdm"]

[project.scripts]
split-folders = "splitfolders.cli:run"
split_folders = "splitfolders.cli:run"
splitfolders = "splitfolders.cli:run"

[project.urls]
Repository = "https://github.com/jfilter/split-folders"

[tool.poetry]
packages = [
  {include = "splitfolders"},
]

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"
tqdm = "*"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
